--- a/index.html
+++ b/index.html
@@ -17,12 +17,18 @@
 
 <body>
     <div class="header"></div>
-    <h1><center><font face="Poppins", color="white">Choose a plan for after your 7-day free trial </font></center></h1>
+    <h1>
+        <center>
+            <font face="Poppins" , color="white">Choose a plan for after your 7-day free trial </font>
+        </center>
+    </h1>
     <div class="container">
         <div class="classic">
             <div class="h1">
-                <h1>CLASSIC</h1>
+                <b>CLASSIC</b>
             </div>
+            <center><h1>₹91<sup>.58</sup>/mo*</h1></center>
+            <center>*₹1,099 Pre-Paid Yearly</center>
             <div class=d1>
                 <ul>
                     <li>25 Puzzles per Day</li>
@@ -33,42 +39,56 @@
                     <li><b>No Ads</b> </li>
                 </ul>
             </div>
-            <div class="buttn"><a href="#">Try Plan</a></div>
+            <center>
+                <div class="buttn"><a href="#">Try Plan</a></div>
+            </center>
         </div>
 
         <div class="gold">
             <div class="h1">
-                <h1>GOLD</h1>
+                <b>Gold</b>
             </div>
+            <center><h1>₹149<sup>.92</sup>/mo*</h1></center>
+            <center>*₹1,799 Pre-Paid Yearly</center>
             <div class="d1">
                 <ul>
-                    <li>Unlimited Puzzles</li>
-                    <li>Unlimited Puzzle Rush</li>
+                    <li><b>Unlimited</b> Puzzles</li>
+                    <li><b>Unlimited</b> Puzzle Rush</li>
                     <li>5 Lessons per Week</li>
                     <li>Game Report & Analysis</li>
                     <li>Unlock All Bots</li>
                     <li><b>No Ads</b></li>
                 </ul>
             </div>
-            <div class="buttn"><a href="#">Try Plan</a></div>
+            <center>
+                <div class="buttn"><a href="#">Try Plan</a></div>
+            </center>
         </div>
         <div class="platinum">
             <div class="h1">
-                <h1>PLATINUM</h1>
+                <b>Platinum</b>
             </div>
+            <center><h1>₹291<sup>.58</sup>/mo*</h1></center>
+            <center>*₹3,499 Pre-Paid Yearly</center>
             <div class="d1">
                 <ul>
-                    <li>Unlimited Puzzles</li>
-                    <li>Unlimited Puzzle Rush</li>
-                    <li>Unlimited Lessons</li>
-                    <li>Unlimited Video Library</li>
+                    <li><b>Unlimited</b> Puzzles</li>
+                    <li><b>Unlimited</b> Puzzle Rush</li>
+                    <li><b>Unlimited</b>Lessons</li>
+                    <li><b>Unlimited</b> Video Library</li>
                     <li>Game Report & Analysis</li>
                     <li>Unlock All Bots</li>
                     <li><b>No Ads</b></li>
                 </ul>
             </div>
-            <div class="buttn"><a href="#">Try Plan</a></div>
+            <center>
+                <div class="buttn"><a href="#">Try Plan</a></div>
+            </center>
         </div>
+    </div>
+    <div class="foot">
+    <center><font face="arial" color="#d1d1d1" size="4px"><b>All Premium Plans Include:</b></font><font size="4px" color="grey"> Opening Explorer, Custom Flair, ChessTV, Drills, Club Management, and Time-out Protection for Daily Games</font>
+    </center>
     </div>
 </body>
 
