--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
             <div class="h1">
                 <b>CLASSIC</b>
             </div>
-            <center><h1>₹91<sup>.58</sup>/mo*</h1></center>
+            <br>
+            <center><h1>₹91<sup>.58</sup>/mo*</h1></center><br>
             <center>*₹1,099 Pre-Paid Yearly</center>
-            <br><br>
+            <br>
             <div class=d1>
                 <ul>
                     <li>25 Puzzles per Day</li>
@@ -49,9 +50,10 @@
             <div class="h1">
                 <b>Gold</b>
             </div>
-            <center><h1>₹149<sup>.92</sup>/mo*</h1></center>
+            <br>
+            <center><h1>₹149<sup>.92</sup>/mo*</h1></center><br>
             <center>*₹1,799 Pre-Paid Yearly</center>
-            <br><br>
+            <br>
             <div class="d1">
                 <ul>
                     <li><b>Unlimited</b> Puzzles</li>
@@ -70,9 +72,10 @@
             <div class="h1">
                 <b>Platinum</b>
             </div>
-            <center><h1>₹291<sup>.58</sup>/mo*</h1></center>
+            <br>
+            <center><h1>₹291<sup>.58</sup>/mo*</h1></center><br>
             <center>*₹3,499 Pre-Paid Yearly</center>
-            <br><br>
+            <br>
             <div class="d1">
                 <ul>
                     <li><b>Unlimited</b> Puzzles</li>
